--- a/package.json
+++ b/package.json
@@ -12,20 +12,25 @@
     "@clerk/nextjs": "^4.26.2",
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.5.2",
-    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@uploadthing/react": "^5.7.0",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^5.7.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
