--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@hookform/resolvers": "^3.3.2",
     "@mux/mux-node": "^7.3.3",
     "@mux/mux-player-react": "^2.2.0",
-    "@prisma/client": "^5.5.2",
+    "@prisma/client": "^5.6.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.10.7",
     "@uploadthing/react": "^5.7.0",
@@ -39,6 +40,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-quill": "^2.0.0",
+    "stripe": "^14.4.0",
     "tailwind-merge": "^2.0.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
@@ -54,7 +56,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
-    "prisma": "^5.5.2",
+    "prisma": "^5.6.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
