--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3002",
-    "lint": "next lint"
+    "start": "next start -p 3001",
+    "lint": "next lint",
+    "deploy": "prisma db push && next build"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.26.2",
